--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -74,7 +74,7 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         cd linux-$kernel_ver
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
-        yes '' | make olddefconfig
+        #yes '' | make olddefconfig
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config
         scripts/config --disable MODULE_SIG
         scripts/config --disable DEBUG_INFO
@@ -83,7 +83,7 @@ jobs:
         scripts/config --disable DEBUG_INFO_DWARF5
         scripts/config --disable DEBUG_INFO_NONE
         echo -e "$(nproc) thread compile"
-        ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
+        ln -s /opt/rh/devtoolset-11/root/usr/bin/* /usr/local/bin/
         sudo time make -j$(nproc) rpm-pkg
         mv /root/rpmbuild/RPMS/x86_64/* /workdir/upload
         echo "::set-output name=status::success"
