--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -75,7 +75,7 @@ jobs:
         cd linux-$kernel_ver
         ln -s /opt/rh/devtoolset-11/root/usr/bin/* /usr/local/bin/
         wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config_elrepo
-        yes '' | make olddefconfig
+        yes '' | make ARCH=x86_64 olddefconfig
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config
         scripts/config --disable MODULE_SIG
         scripts/config --disable DEBUG_INFO
@@ -84,7 +84,7 @@ jobs:
         scripts/config --disable DEBUG_INFO_DWARF5
         scripts/config --disable DEBUG_INFO_NONE
         echo -e "$(nproc) thread compile"
-        
+        cat kernel.spec
         sudo time make -j$(nproc) rpm-pkg
         mv /root/rpmbuild/RPMS/x86_64/* /workdir/upload
         echo "::set-output name=status::success"
