--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -53,7 +53,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        kernel_file=$(curl -s https://www.kernel.org/ | grep 'alt="Download"' | awk -F '"' '{print $2}')
+        kernel_file=$(curl -s https://www.kernel.org/ | awk '/longterm/{getline;getline;getline; print}' | head -n 1 | awk -F '["]' '{print $2}' | awk -F '["]' '{print $1}')
         kernel_ver=$(curl -s https://www.kernel.org/ | awk '/longterm/{getline a;print a}' | head -n 1 | grep -oP "<strong>\K[0-9]+\.[0-9]+(\.[0-9]+)?")
         wget -O kernel.tar.xz $kernel_file
         tar -Jxvf kernel.tar.xz -C /workdir && cd /workdir/linux-$kernel_ver
