--- a/.github/workflows/Debian_kernel_latest.yml
+++ b/.github/workflows/Debian_kernel_latest.yml
@@ -87,7 +87,7 @@ jobs:
         scripts/config --disable SYSTEM_TRUSTED_KEYS
         scripts/config --disable SYSTEM_REVOCATION_KEYS
         echo -e "$(nproc) thread compile"
-        sudo time make -j$(nproc) deb-pkg
+        sudo time make -j$(nproc) bindeb-pkg
         cd /workdir && mv *.deb /workdir/upload
         echo '::set-output name=action_echo::enabled'
         echo "::set-output name=status::success"
