--- a/.github/workflows/Debian_kernel_latest.yml
+++ b/.github/workflows/Debian_kernel_latest.yml
@@ -107,7 +107,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
-        tag_name: ${{ release_tag }}
+        tag_name: ${{ tag.release_tag }}
         body_path: release.txt
         files: /workdir/upload/*
 
