--- a/.github/workflows/Debian_kernel_latest.yml
+++ b/.github/workflows/Debian_kernel_latest.yml
@@ -34,7 +34,7 @@ jobs:
         kernel_ver=$(curl -s https://www.kernel.org/ | grep ' <a href="https://cdn.kernel.org/pub/linux/kernel/' | head -n 1 | awk -F '[>]' '{print $2}' | awk -F '[<]' '{print $1}')
         echo "github_ver=$github_ver"
         echo "kernel_ver=$kernel_ver"
-        if [[ $github_ver == *"$kernel_ver"* ]]; then
+        if [ $github_ver == *"$kernel_ver"* ]; then
             echo "action_echo=enabled" >> $GITHUB_ENV
             echo "versions.status=fail" >> $GITHUB_ENV
         else
